# ae-asteroids

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: cube.fbx  diamond.fbx  level0.fbx  plane.fbx  ship.fbx
src/: Component.h  Components.cpp  Components.h  Game.cpp  Game.h  Level.cpp  Level.h  Resources.cpp  Resources.h  ae.cpp  ae.mm  main.cpp
